--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
         <span><strong>Organization:</strong> <span id="org"></span></span><br>
         <span><strong>Timezone:</strong> <span id="timezone"></span></span>
     </div>
+    <div class="text">👑 محمد جودت 👑</div>
+    
+    </div>
     <div class="text">discord.gg/3MermwaaHx</div>
 
     <script>
