--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
     <div class="image-container">
-        <img src="https://cdn.discordapp.com/icons/1382844412135997580/481a81cbb324ba871fd615be3b3fa5a9.webp?size=1024" alt="Discord Image">
+        <img src="https://cdn.discordapp.com/attachments/1386083816866840717/1428738135084367902/ced966cadd1742392e2478676f79b484.gif?ex=6902c0d4&is=69016f54&hm=60a556d73b1383f4addc8041da2d27b0f3ed2a73a3a12123ce6232757d4b4698&" alt="Discord Image">
     </div>
     <audio autoplay loop>
         <source src="https://cdn.discordapp.com/attachments/1192142718797893724/1433037454021234848/2020_Soooon_.mp3?ex=69033ba1&is=6901ea21&hm=3aceb98990cafeaf9467e09c886ba14c7435ef1c442137e42f496f71d723f9da&" type="audio/mpeg">
